--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="/css/style.css" />
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+      ScrollReveal({
+        // reset: true,
+        distance: "100px",
+        duration: 2000,
+        delay: 200,
+      });
+    </script>
   </head>
   <body>
     <header class="header">
       <a href="#" class="logo">Portfolio.</a>
 
-      <i class="bx bx-menu"></i>
+      <i class="bx bx-menu bx-btn"></i>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -205,4 +214,5 @@
   </body>
 
   <script src="js/script.js"></script>
+  <script src="js/reveal.js"></script>
 </html>
