--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <a href="#" class="btn">Download CV</a>
       </div>
       <div class="home-img">
-        <img src="/media/20230124_122503-removebg.png" alt="" />
+        <img src="media/20230124_122503-removebg.png" alt="" />
       </div>
     </section>
     <section class="about" id="about">
       <div class="about-img">
-        <img src="/media/20230124_122503-removebg.png" alt="" />
+        <img src="media/20230124_122503-removebg.png" alt="" />
       </div>
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
@@ -113,7 +113,7 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="/media/portfolio1.png" alt="" />
+          <img src="media/portfolio1.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio2.png" alt="" />
+          <img src="media/portfolio2.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio3.png" alt="" />
+          <img src="media/portfolio3.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio4.png" alt="" />
+          <img src="media/portfolio4.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -157,7 +157,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio5.png" alt="" />
+          <img src="media/portfolio5.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -168,7 +168,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio6.png" alt="" />
+          <img src="media/portfolio6.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
