--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script>
-      ScrollReveal({
-        // reset: true,
-        distance: "100px",
-        duration: 2000,
-        delay: 200,
-      });
-    </script>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
@@ -56,12 +46,12 @@
         <a href="#" class="btn">Download CV</a>
       </div>
       <div class="home-img">
-        <img src="/media/20230124_122503-removebg.png" alt="" />
+        <img src="./media/20230124_122503-removebg.png" alt="" />
       </div>
     </section>
     <section class="about" id="about">
       <div class="about-img">
-        <img src="/media/20230124_122503-removebg.png" alt="" />
+        <img src="./media/20230124_122503-removebg.png" alt="" />
       </div>
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
@@ -113,7 +103,7 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="/media/portfolio1.png" alt="" />
+          <img src="./media/portfolio1.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -124,7 +114,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio2.png" alt="" />
+          <img src="./media/portfolio2.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -135,7 +125,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio3.png" alt="" />
+          <img src="./media/portfolio3.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -146,7 +136,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio4.png" alt="" />
+          <img src="./media/portfolio4.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -157,7 +147,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio5.png" alt="" />
+          <img src="./media/portfolio5.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -168,7 +158,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/media/portfolio6.png" alt="" />
+          <img src="./media/portfolio6.png" alt="" />
           <div class="portfolio-layer">
             <h4>Train Cabin</h4>
             <p>
@@ -211,8 +201,16 @@
         <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
       </div>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+      ScrollReveal({
+        // reset: true,
+        distance: "100px",
+        duration: 2000,
+        delay: 200,
+      });
+    </script>
+    <script src="./js/reveal.js"></script>
+    <script src="./js/script.js"></script>
   </body>
-
-  <script src="js/script.js"></script>
-  <script src="js/reveal.js"></script>
 </html>
