--- a/index.html
+++ b/index.html
@@ -183,18 +183,17 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
 
-      <form action="#">
+      <form action="mailto:kubawin11@gmail.com" method='get'>
         <div class="input-box">
-          <input type="text" placeholder="Full Name" />
-          <input type="email" placeholder="Email Address" />
+          <input type="text" name="subject" placeholder="Full Name" />
+          <input type="email" name="email" placeholder="Email Address" />
         </div>
         <div class="input-box">
           <input type="number" placeholder="Mobile Number" />
           <input type="text" placeholder="Email Subject" />
         </div>
         <textarea
-          name=""
-          id=""
+          name="body"
           cols="30"
           rows="10"
           placeholder="Your Message"
